--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -1,48 +1,48 @@
-.loginPage {
+.loginContainer {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: linear-gradient(to bottom, #3498db, #2980b9);
+  background-color: rgb(66, 66, 153);
 }
 
-.loginBox {
-  background-color: #fff;
+.loginForm {
+  background-color: #ffffff;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  padding: 40px;
-  text-align: center;
-  max-width: 350px;
-}
-
-h2 {
-  color: #333;
-}
-
-input {
-  width: 100%;
-  padding: 10px 0 10px 10px;
-  margin: 10px 0;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-button {
-  //   width: 100%;
-  margin-top: 20px;
-  background-color: #3498db;
-  color: #fff;
-  padding: 15px 70px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-.loginSuccess {
-  background-color: #dff0d8;
-  border: 1px solid #d0e9c6;
   padding: 20px;
-  border-radius: 4px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
   text-align: center;
+
+  h2 {
+    color: #333;
+  }
+
+  input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+  }
+
+  button {
+    background-color: rgb(66, 66, 153);
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
+
+  button:hover {
+    background-color: rgb(84, 84, 187);
+  }
+}
+
+.error {
+  color: #ff0000;
+  margin-bottom: 10px;
 }
