--- a/src/pages/TeacherTable/TeacherTable.module.scss
+++ b/src/pages/TeacherTable/TeacherTable.module.scss
@@ -127,3 +127,14 @@ main {
     cursor: pointer;
   }
 }
+
+button {
+  //   width: 100%;
+  margin-top: 20px;
+  background-color: #3498db;
+  color: #fff;
+  padding: 15px 70px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
