--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,34 @@ body {
   font-family: sans-serif;
   background-color: #f5f5f5;
 }
+
+p {
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
 * {
   box-sizing: border-box;
+  cursor: pointer;
 }
