--- a/src/pages/TeacherTable/TeacherTable.module.scss
+++ b/src/pages/TeacherTable/TeacherTable.module.scss
@@ -47,16 +47,17 @@ main {
       .activeButton {
         background-color: rgb(66, 66, 153);
         color: #f0f0f0;
-        font-size: 25px;
+        font-size: 20px;
         border-radius: 20px;
       }
 
       button {
         background-color: white;
         color: rgb(66, 66, 153);
-        font-size: 25px;
+        font-size: 20px;
         border-radius: 20px;
         margin: 0 10px;
+        padding:10px;
       }
     }
   }
@@ -69,12 +70,12 @@ main {
       .activeButton {
         background-color: rgb(66, 66, 153);
         color: #f0f0f0;
-        font-size: 25px;
+        font-size: 15px;
         border-radius: 20px;
       }
       button {
         margin: 0;
-        font-size: 25px;
+        font-size: 15px;
         border-radius: 20px;
         background-color: #ffffff;
         color: rgb(66, 66, 153);
@@ -85,7 +86,7 @@ main {
       margin: 0 20px;
       .dropdown {
         margin: 0;
-        font-size: 25px;
+        font-size: 15px;
         border-radius: 20px;
         background-color: #ffffff;
         color: rgb(66, 66, 153);
