--- a/src/components/Teacher/TeacherSettings/TeacherSettings.module.scss
+++ b/src/components/Teacher/TeacherSettings/TeacherSettings.module.scss
@@ -10,12 +10,55 @@
   text-align: center;
 
   h5 {
-    padding: 10px 0 ;
+    padding: 10px 0;
     border-top: 2px solid #e5e5e5;
     border-bottom: 2px solid #e5e5e5;
   }
   .viewProfile {
     width: 90%;
     margin: 20px 0;
+  }
+}
+
+.basicInformation {
+  background-color: white;
+  margin: 20px 0;
+  padding: 20px;
+  h2 {
+    border-bottom: 2px solid #e5e5e5;
+    padding: 0 0 20px 0;
+  }
+  .changePhoto {
+    margin: 60px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .photo {
+      text-align: center;
+      img {
+        border-radius: 50%;
+      }
+    }
+  }
+  .blokUi {
+    display: block;
+    li {
+      margin: 10px 0;
+    }
+  }
+
+  .displayName,
+  .country,
+  .city {
+    margin: 20px;
+    h5 {
+      margin: 10px 0;
+    }
+    input {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #e5e5e5;
+      border-radius: 5px;
+    }
   }
 }
