--- a/src/components/Teacher/Header/Header.module.scss
+++ b/src/components/Teacher/Header/Header.module.scss
@@ -16,9 +16,15 @@ ul {
     margin-left: 20px;
   }
 }
-.profileLogo {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  margin-right: 10px;
+
+.profileSettings {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    margin-right: 10px;
+  }
 }
