--- a/src/components/Teacher/Lessons/Lesson.module.scss
+++ b/src/components/Teacher/Lessons/Lesson.module.scss
@@ -1,29 +1,31 @@
-.lessons {
-  background-color: white;
+.lessonSection {
   margin: 20px 0;
-  padding: 20px;
-  .lessonsList {
+  .lessons {
+    background-color: white;
     padding: 20px;
-    margin: 20px 0;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    border: 2px solid rgb(241, 232, 232);
-  }
-  .cad {
-    .time {
-      background-color: rgb(239, 76, 76);
-      color: white;
-      border-radius: 20px;
-      text-align: center;
-      margin-bottom: 10px;
+    .lessonsList {
+      padding: 20px;
+      margin: 20px 0;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+      border: 2px solid rgb(241, 232, 232);
     }
+    .cad {
+      .time {
+        background-color: rgb(239, 76, 76);
+        color: white;
+        border-radius: 20px;
+        text-align: center;
+        margin-bottom: 10px;
+      }
 
-    .price {
-      background-color: rgb(232, 212, 212);
-      color: rgb(222, 50, 50);
-      border-radius: 20px;
-      text-align: center;
+      .price {
+        background-color: rgb(232, 212, 212);
+        color: rgb(222, 50, 50);
+        border-radius: 20px;
+        text-align: center;
+      }
     }
   }
 }
