feat:add design in UI/UX

--- a/src/components/Student/StudentLesson/StudentLesson.module.scss
+++ b/src/components/Student/StudentLesson/StudentLesson.module.scss
@@ -1,7 +1,8 @@
 .lessons {
   background-color: white;
-  margin: 0 0 20px 0;
+  margin: 20px 0;
   padding: 20px;
+  border-radius: 10px;
   .lessonsList {
     padding: 20px;
     margin: 20px 0;
