--- a/src/components/Teacher/Resume/Resume.module.scss
+++ b/src/components/Teacher/Resume/Resume.module.scss
@@ -1,13 +1,20 @@
-.resume {
-  background-color: white;
-  padding: 20px;
-}
+.resumeSection {
+  margin: 20px 0 40px 0;
+  .resume {
+    background-color: white;
+    padding: 30px;
+    border-radius: 8px;
+    .title{
+      margin: 20px 0 40px 0;
+    }
+  }
 
-.resumeInfo {
-  display: flex;
-  h5 {
-    border-left: 2px solid rgb(97, 150, 215);
-    margin: 20px 0;
-    padding: 0 0 0 10px;
+  .resumeInfo {
+    display: flex;
+    h5 {
+      border-left: 2px solid rgb(97, 150, 215);
+      margin: 20px 0;
+      padding: 0 0 0 10px;
+    }
   }
 }
