--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,7 +1,3 @@
-p {
-  color: rgb(66, 66, 153);
-}
-
 main {
   padding: 0 40px;
   background-color: #f0f0f0;
@@ -16,9 +12,32 @@ main {
   .login {
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 20px;
+    .basket {
+      color: #db3580;
+      font-size: 40px;
+      position: relative;
+      .basketCount {
+        position: absolute;
+        top: -20px;
+        right: -20px;
+        background-color: white;
+
+        color: #db3580;
+        padding: 0px 5px;
+        border-radius: 50%;
+        p {
+          margin: 0;
+          font-size: 25px;
+        }
+      }
+    }
+    .studentProfile svg {
+      color: #db3580;
+      font-size: 30px;
+    }
     .loginButton {
-      background-color: rgb(66, 66, 153);
+      background-color: #db3580;
       border: none;
       padding: 10px 20px;
       border-radius: 10px;
@@ -31,8 +50,8 @@ main {
 
   .title {
     h1 {
-      color: rgb(66, 66, 153);
-      border-bottom: 5px solid rgb(66, 66, 153);
+      color: #db3580;
+      border-bottom: 5px solid #db3580;
     }
   }
 }
@@ -57,7 +76,7 @@ main {
         font-size: 20px;
         border-radius: 20px;
         margin: 0 10px;
-        padding:10px;
+        padding: 10px;
       }
     }
   }
@@ -93,49 +112,6 @@ main {
         padding: 10px;
       }
     }
-  }
-}
-
-.cards {
-  .card-group {
-    padding: 100px 0 !important;
-  }
-
-  .cardImage {
-    position: relative;
-    .lessonType {
-      position: absolute;
-      top: 10px;
-      right: 10px;
-      color: white;
-      background-color: rgb(66, 169, 76);
-      padding: 3px 10px;
-      border-radius: 10px;
-    }
-
-    .lessonName {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      color: rgb(66, 169, 76);
-      background-color: rgb(255, 255, 255);
-      padding: 3px 10px;
-      border-radius: 10px;
-    }
-  }
-
-  .cardBody {
-    background-color: rgb(66, 66, 153);
-  }
-
-  .teacherName,
-  .cardDesc {
-    color: white;
-    margin: 0;
-  }
-
-  .cardDesc {
-    font-size: 24px;
   }
 }
 
