Update CourseDetail and Header components

--- a/src/components/Student/Header/Header.module.scss
+++ b/src/components/Student/Header/Header.module.scss
@@ -11,4 +11,9 @@ header {
       height: 40px;
     }
   }
+  ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
 }
