--- a/src/components/Teacher/Lessons/LessonList/LessonList.module.scss
+++ b/src/components/Teacher/Lessons/LessonList/LessonList.module.scss
@@ -1,11 +1,17 @@
 .lessonSection {
   border-radius: 10px;
   margin: 20px 0 !important;
+  .lessonHeader {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 
   .lessons {
     background-color: white;
     padding: 30px;
     border-radius: 10px;
+    margin: 20px 0;
     .rightContent {
       .time {
         background-color: #db3580;
@@ -28,7 +34,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
   }
 
   .card {
