--- a/src/components/Student/StudentInfo/StudentInfo.module.scss
+++ b/src/components/Student/StudentInfo/StudentInfo.module.scss
@@ -4,7 +4,7 @@
   margin: 40px 0 0 0;
   padding: 30px;
   border-radius: 10px;
-  .teacherPhoto {
+  .StudentPhoto {
     img {
       width: 100%;
       height: 100%;
@@ -17,17 +17,17 @@
       margin-top: 20px;
     }
   }
-  .teacherInfo {
+  .StudentInfo {
     margin: 0 30px;
   }
 
-  .teacherInfo,
-  .teacherRating {
+  .StudentInfo,
+  .StudentRating {
     p {
       margin: 20px 0;
     }
   }
-  .teacherRating {
+  .StudentRating {
     text-align: end;
   }
 }
