--- a/src/components/Student/MyLearning/MyCourses/MyCourses.scss
+++ b/src/components/Student/MyLearning/MyCourses/MyCourses.scss
@@ -40,6 +40,7 @@
     margin: 5px 0;
     font-size: 14px;
   }
+
   .course-list {
     .courseName {
       text-align: left;
@@ -60,6 +61,56 @@
       text-align: right;
       font-size: 16px;
       font-weight: 400;
+    }
+  }
+}
+.course-card {
+  position: relative;
+  border: 1px solid #ccc;
+  padding: 10px;
+  background-color: #fff;
+  text-align: center;
+
+  .menu {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+
+    .menu-btn {
+      background: white;
+      border: none;
+      cursor: pointer;
+      font-size: 18px;
+    }
+
+    .menu-dropdown {
+      position: absolute;
+      top: 30px;
+      right: 0;
+      background: #fff;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      z-index: 100;
+
+      .menu-item {
+        display: flex;
+        align-items: center;
+        padding: 10px;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #f4f4f4;
+        }
+
+        .icon {
+          margin-right: 8px;
+        }
+
+        span {
+          font-size: 14px;
+        }
+      }
     }
   }
 }
