feat: update CourseDetail

--- a/src/components/Courses/CourseDetail/CourseDetail.module.scss
+++ b/src/components/Courses/CourseDetail/CourseDetail.module.scss
@@ -315,6 +315,7 @@
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .lessonTitle {
       font-size: 18px;
@@ -363,7 +364,7 @@
   }
 
   .buyBtn {
-    width: 100%;
+    // width: 100%;
     padding: 10px;
     background-color: #d63384;
     color: #fff;
