--- a/src/components/Student/Header/Header.module.scss
+++ b/src/components/Student/Header/Header.module.scss
@@ -13,7 +13,8 @@ header {
   }
   ul {
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-end;
     align-items: center;
+    gap: 20px;
   }
 }
